--- a/frontend/react-app/package.json
+++ b/frontend/react-app/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write **/*.{ts,tsx}",
-    "lint-staged": "eslint --fix ./src/* && prettier --write **/*.{ts,tsx}"
+    "lint-staged": "eslint --fix ./src/* && prettier --write **/*.{ts,tsx}",
+    "jest": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -52,7 +56,15 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.6"
+    "prettier": "^2.8.6",
+    "react-test-renderer": "^18.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint --fix ./src/* && prettier --write **/*.{ts,tsx}",
+      "pre-push": "jest"
+    }
   }
 }
