--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,8 +5,8 @@ on:
 
 env:
   OIDC_ARN: ${{ secrets.AWS_OIDC_ARN }}
-  TF_VAR_aws_region: 'ap-northeast-1'
-  TF_VAR_domain_name: 'ymnk.fun'
+  BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+  DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
 
 permissions:
   id-token: write
@@ -43,37 +43,8 @@ jobs:
           role-to-assume: ${{ env.OIDC_ARN }}
           aws-region: ap-northeast-1
 
-      - name: Terraform Format
-        id: fmt
-        working-directory: ./terraform
-        run: terraform fmt -check
-
-      - name: Terraform Init
-        id: init
-        working-directory: ./terraform
-        run: terraform init
-
-      - name: Terraform Validate
-        id: validate
-        working-directory: ./terraform
-        run: terraform validate -no-color
-
-      - name: Terraform Plan
-        id: plan
-        # if: github.event_name == 'pull_request'
-        working-directory: ./terraform
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: tfcmt plan -patch -- terraform plan -no-color -input=false
-
-      - name: Terraform Plan Status
-        if: steps.plan.outcome == 'failure'
-        working-directory: ./terraform
-        run: exit 1
-
-      - name: Terraform Apply
-        # if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        working-directory: ./terraform
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: tfcmt apply -- terraform apply -auto-approve -input=false
+      - name: Deploy
+        working-directory: ./frontend/react-app
+        run: |
+          aws s3 sync ./build s3://${{ env.BUCKET_NAME }}
+          aws cloudfront create-invalidation --region ap-northeast-1 --distribution-id ${{ env.DISTRIBUTION_ID }} --paths "/*"
